--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,9 +16,29 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      #run: mvn -B package --file pom.xml
+      run: mvn clean install
+    
+    - name: move war file to parent directory
+      run: mv /home/runner/work/hello-world/hello-world/webapp/target/webapp.war  /home/runner/work/hello-world/hello-world/
+
+    - name: check directory
+      run: ls /home/runner/work/hello-world/hello-world/
+
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: vichnik/docker-image
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        dockerfile: Dockerfile
+    
+    - name: check directory
+      run: ls .
